--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="src/index.css">
-    <title>Vite + React + TS</title>
+    <title>A Simple Site</title>
   </head>
   <body>
     <div id="root"></div>
